# SistemasDistribuidos

http_server/: CMakeLists.txt  CMakeLists.txt.user.9cefc2f  CMakeLists.txt.user.db13fbe.22  filemanager.cpp  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  http_server  httpserver.cpp  httpserver.h  main.cpp  main_fm.cpp  main_remotefile.cpp  main_slave.cpp  mpi_manager.cpp  mpi_manager.h  prueba.txt  pruebaclase.cpp  pruebaclase.h  pruebaclase_imp.cpp  pruebaclase_imp.h  pruebaclase_stub.cpp  pruebaclase_stub.h  remotefile.cpp  remotefile.h  remotefile_imp.cpp  remotefile_imp.h  remotefile_stub.cpp  remotefile_stub.h  store_service.html  utils.cpp  utils.h
http_server/html_dir/: download_service.html  download_services.html  index.html  resultado.html  services.html  store_service.html  styles.css
